[package]
name = "nand-core"
version = "0.1.0"
authors = ["Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"
description = "NAND's computer API"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--inline-functions-with-loops",
    "--traps-never-happen",
    "--low-memory-unused",
    "--fast-math",
    "--zero-filled-memory",
    "--enable-threads",
    "--enable-bulk-memory",
    # "--enable-mutable-globals",
    # "--enable-nontrapping-float-to-int",
    # "--enable-simd",
    # "--enable-tail-call",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "core/lib.rs"

[dependencies]
js-sys = "0.3.67"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Window",
    "Performance",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
# NOTE: tests with opt-level 2 have around the same performance
# as with opt-level 3, so let's just use opt-level 3 for now.
