[package]
name = "core"
version = "0.1.0"
authors = ["Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/builtins.rs"

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.84"

[profile.release]
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true

[profile.dev]
opt-level = 0
panic = "abort"
